--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -886,6 +886,10 @@ input:focus {
   margin-bottom: 0.5rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-15px {
   margin-bottom: 15px;
 }
@@ -904,6 +908,10 @@ input:focus {
 
 .mb-25px {
   margin-bottom: 25px;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mb-5px {
@@ -974,8 +982,12 @@ input:focus {
   margin-top: 62px;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .block {
@@ -1039,6 +1051,10 @@ input:focus {
   width: 100%;
 }
 
+.w-\[465px\] {
+  width: 465px;
+}
+
 .max-w-\[591px\] {
   max-width: 591px;
 }
@@ -1049,6 +1065,10 @@ input:focus {
 
 .max-w-none {
   max-width: none;
+}
+
+.max-w-\[418px\] {
+  max-width: 418px;
 }
 
 .grow {
@@ -1155,6 +1175,10 @@ input:focus {
   overflow: hidden;
 }
 
+.rounded-25px {
+  border-radius: 25px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1167,16 +1191,20 @@ input:focus {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-\[\#ECECEC\] {
@@ -1184,14 +1212,19 @@ input:focus {
   border-color: rgb(236 236 236 / var(--tw-border-opacity));
 }
 
+.border-b-primary-300 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(197 255 220 / var(--tw-border-opacity));
+}
+
 .border-t-\[\#f0f0f0\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(240 240 240 / var(--tw-border-opacity));
 }
 
-.border-b-primary-300 {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(197 255 220 / var(--tw-border-opacity));
+.bg-\[\#202020\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#E0FFEC\] {
@@ -1228,8 +1261,30 @@ input:focus {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F5F7FA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 247 250 / var(--tw-bg-opacity));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 162 0 / var(--tw-bg-opacity));
+}
+
 .p-7px {
   padding: 7px;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-15px {
@@ -1252,12 +1307,26 @@ input:focus {
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .pb-15px {
   padding-bottom: 15px;
 }
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-85px {
+  padding-bottom: 85px;
 }
 
 .pb-90px {
@@ -1270,6 +1339,10 @@ input:focus {
 
 .pb-\[128px\] {
   padding-bottom: 128px;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-100px {
@@ -1300,6 +1373,10 @@ input:focus {
   text-align: center;
 }
 
+.font-hindSiliguri {
+  font-family: 'Hind Siliguri', sans-serif;
+}
+
 .text-22px {
   font-size: 22px;
 }
@@ -1311,6 +1388,10 @@ input:focus {
 
 .text-34px {
   font-size: 34px;
+}
+
+.text-40px {
+  font-size: 40px;
 }
 
 .text-\[70px\] {
@@ -1407,6 +1488,11 @@ input:focus {
   color: rgb(255 162 0 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1419,8 +1505,46 @@ input:focus {
   text-decoration-color: #747474;
 }
 
+.decoration-white {
+  text-decoration-color: #fff;
+}
+
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.placeholder\:text-lightGray::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(86 97 111 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-lightGray::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(86 97 111 / var(--tw-text-opacity));
+}
+
+.placeholder\:underline::-moz-placeholder {
+  text-decoration-line: underline;
+}
+
+.placeholder\:underline::placeholder {
+  text-decoration-line: underline;
+}
+
+.placeholder\:decoration-lightGray::-moz-placeholder {
+  text-decoration-color: #56616F;
+}
+
+.placeholder\:decoration-lightGray::placeholder {
+  text-decoration-color: #56616F;
+}
+
+.placeholder\:opacity-100::-moz-placeholder {
+  opacity: 1;
+}
+
+.placeholder\:opacity-100::placeholder {
+  opacity: 1;
 }
 
 .before\:absolute::before {
