--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -8,7 +8,6 @@
     }
     body{
         @apply font-urbanist selection:bg-primary selection:text-white;
-        padding-bottom: 300px;
     }
 
     input{
@@ -39,12 +38,18 @@
     @apply w-14 h-14 rounded-full border-2 border-primary bg-transparent  inline-flex justify-center items-center
 }
 
-._edumy_slider_btn.active{
-    @apply bg-primary 
+._edumy_slider_btn * {
+    @apply fill-primary
 }
-._edumy_slider_btn.active * {
+
+._edumy_slider_btn.swiper-button-disabled{
+    @apply bg-primary
+}
+
+._edumy_slider_btn.swiper-button-disabled *{
     @apply fill-white
 }
+
 
 
 /* Services Section */
@@ -93,11 +98,17 @@
 /* Testimonial Section */
 
 ._edumy_slider_pagination > *{
-    @apply w-10 h-2 bg-[#D8F0E1] rounded-full duration-300 cursor-pointer
+    @apply w-10 h-2 bg-[#D8F0E1] rounded-full duration-300 cursor-pointer !opacity-100
 }
 
-._edumy_slider_pagination > .active{
+._edumy_slider_pagination > .swiper-pagination-bullet-active{
     @apply bg-primary
 }
-    
+/* Footer Section */
+._edumay_footer_menu_title{
+    @apply text-dark text-22px leading-30px font-hindSiliguri mb-4 font-medium underline decoration-dark
+}
+._edumy_footer_menu_link{
+    @apply text-lightGray font-hindSiliguri text-lg leading-8 underline decoration-lightGray
+}
 }
